--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <p><br /><b>Infrastructure (Backup & DevOps) Intern Engineer</b><br />MillenniumIT ESP - 6 months</p>
             </div>
           </div>
-          <hr style="margin: 1rem 0; border: 0; border-top: 1px solid var(--border);" />
+          <hr style="margin: 1rem 0; border: 0; border-top: 1px solid rgba(255, 255, 255, 0.2);" />
           <div class="about-containers-edu-gap">
             <div class="details-container box-uni" data-aos="fade-up" data-aos-once="true" onclick="window.open('https://drive.google.com/file/d/1M0jEzFv5mTJ1HM-qR6zEkbHCgxBx9YbO/view?usp=share_link', '_blank')">
               <div class="link-icon-container">
