--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project_1.png"
                 alt="Project 1"
                 class="project-img"
                 data-speed="0.02"
@@ -236,7 +236,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project_2.png"
                 alt="Project 2"
                 class="project-img"
                 data-speed="0.02"
@@ -256,7 +256,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project_3.webp"
                 alt="Project 3"
                 class="project-img"
                 data-speed="0.02"
@@ -276,7 +276,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project_4.png"
                 alt="Project 4"
                 class="project-img"
                 data-speed="0.02"
@@ -316,7 +316,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project_6.jpg"
                 alt="Project 6"
                 class="project-img"
                 data-speed="0.02"
@@ -336,7 +336,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project_7.jpg"
                 alt="Project 7"
                 class="project-img"
                 data-speed="0.02"
@@ -353,7 +353,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project_8.png"
                 alt="Project 8"
                 class="project-img"
                 data-speed="0.02"
@@ -370,7 +370,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project_9.jpg"
                 alt="Project 9"
                 class="project-img"
                 data-speed="0.02"
@@ -388,7 +388,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project_1.png"
                 alt="Project 1"
                 class="project-img"
                 data-speed="0.02"
@@ -408,7 +408,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project_2.png"
                 alt="Project 2"
                 class="project-img"
                 data-speed="0.02"
@@ -428,7 +428,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project_3.webp"
                 alt="Project 3"
                 class="project-img"
                 data-speed="0.02"
@@ -448,7 +448,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project_4.png"
                 alt="Project 4"
                 class="project-img"
                 data-speed="0.02"
@@ -488,7 +488,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project_6.jpg"
                 alt="Project 6"
                 class="project-img"
                 data-speed="0.02"
@@ -508,7 +508,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/project_7.jpg"
                 alt="Project 7"
                 class="project-img"
                 data-speed="0.02"
@@ -525,7 +525,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project_8.png"
                 alt="Project 8"
                 class="project-img"
                 data-speed="0.02"
@@ -542,7 +542,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/project_9.jpg"
                 alt="Project 9"
                 class="project-img"
                 data-speed="0.02"
