--- a/project_1.html
+++ b/project_1.html
@@ -12,7 +12,7 @@
   <body>
     <nav id="desktop-nav" style="justify-content: flex-start; padding-left: 5%;">
       <ul class="nav-links">
-        <li><a href="index.html#projects" class="btn btn-color-2" style="width: auto; display: flex; align-items: center; gap: 0.5rem; text-decoration: none; padding: 0.5rem 1.5rem;"><span style="font-size: 2.5rem; line-height: 0; padding-bottom: 5px;">&#8592;</span> Back to Home</a></li>
+        <li><a href="index.html#projects" class="btn btn-color-2" style="width: auto; display: flex; align-items: center; gap: 0.5rem; text-decoration: none; padding: 0.5rem 1.5rem;"><span style="line-height: 0; padding-bottom: 5px;">&#8592;</span> Back to Home</a></li>
       </ul>
     </nav>
     
