--- a/project_9.html
+++ b/project_9.html
@@ -12,7 +12,7 @@
   <body>
     <nav id="desktop-nav" style="justify-content: flex-start; padding-left: 5%;">
       <ul class="nav-links">
-        <li><a href="index.html#projects" class="btn btn-color-2" style="width: auto; display: flex; align-items: center; gap: 0.5rem; text-decoration: none; padding: 0.5rem 1.5rem;"><span style="font-size: 2.5rem; line-height: 0; padding-bottom: 5px;">&#8592;</span> Back to Home</a></li>
+        <li><a href="index.html#projects" class="btn btn-color-2" style="width: auto; display: flex; align-items: center; gap: 0.5rem; text-decoration: none; padding: 0.5rem 1.5rem;"><span style="line-height: 0; padding-bottom: 5px;">&#8592;</span> Back to Home</a></li>
       </ul>
     </nav>
     
@@ -32,12 +32,11 @@
             <!-- Swiper -->
             <div class="swiper projectSwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./projects/Project_9/1.heic" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_9/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_9/3.png" alt="Project Image 3" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_9/1.png" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_9/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_9/3.png" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_9/1.jpg" alt="Project Image 1" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_9/2.heic" alt="Project Image 2" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_9/3.heic" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_9/4.heic" alt="Project Image 4" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_9/5.heic" alt="Project Image 5" /></div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
