--- a/project_3.html
+++ b/project_3.html
@@ -32,12 +32,13 @@
             <!-- Swiper -->
             <div class="swiper projectSwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./projects/Project_3/1.png" alt="Project Image 1" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_3/1.webp" alt="Project Image 1" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_3/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_3/3.png" alt="Project Image 3" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_3/1.png" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_3/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_3/3.png" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_3/1.heic" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_3/2.heic" alt="Project Image 4" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_3/3.heic" alt="Project Image 5" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_3/4.heic" alt="Project Image 6" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_3/5.heic" alt="Project Image 7" /></div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
