--- a/project_7.html
+++ b/project_7.html
@@ -32,12 +32,10 @@
             <!-- Swiper -->
             <div class="swiper projectSwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./projects/Project_7/1.png" alt="Project Image 1" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_7/1.jpg" alt="Project Image 1" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_7/2.png" alt="Project Image 2" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_7/3.png" alt="Project Image 3" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_7/1.png" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_7/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_7/3.png" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_7/4.heic" alt="Project Image 4" /></div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
