--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project_1.png"
+                src="./assets/project_1.jpg"
                 alt="Project 1"
                 class="project-img"
                 data-speed="0.02"
@@ -276,7 +276,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project_4.png"
+                src="./assets/project_4.jpg"
                 alt="Project 4"
                 class="project-img"
                 data-speed="0.02"
@@ -353,7 +353,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project_8.png"
+                src="./assets/project_8.jpg"
                 alt="Project 8"
                 class="project-img"
                 data-speed="0.02"
@@ -388,7 +388,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project_1.png"
+                src="./assets/project_1.jpg"
                 alt="Project 1"
                 class="project-img"
                 data-speed="0.02"
@@ -448,7 +448,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project_4.png"
+                src="./assets/project_4.jpg"
                 alt="Project 4"
                 class="project-img"
                 data-speed="0.02"
@@ -525,7 +525,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project_8.png"
+                src="./assets/project_8.jpg"
                 alt="Project 8"
                 class="project-img"
                 data-speed="0.02"
