--- a/project_1.html
+++ b/project_1.html
@@ -33,8 +33,9 @@
             <div class="swiper projectSwiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide"><img src="./projects/Project_1/1.png" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_1/2.png" alt="Project Image 2" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_1/2.jpg" alt="Project Image 2" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_1/3.png" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_1/4.png" alt="Project Image 4" /></div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
