--- a/project_4.html
+++ b/project_4.html
@@ -33,11 +33,13 @@
             <div class="swiper projectSwiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide"><img src="./projects/Project_4/1.png" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_4/2.png" alt="Project Image 2" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_4/2.jpg" alt="Project Image 2" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_4/3.png" alt="Project Image 3" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_4/1.png" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_4/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_4/3.png" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_4/4.png" alt="Project Image 4" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_4/5.heic" alt="Project Image 5" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_4/6.heic" alt="Project Image 6" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_4/7.heic" alt="Project Image 7" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_4/8.heic" alt="Project Image 8" /></div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
