--- a/project_6.html
+++ b/project_6.html
@@ -35,6 +35,7 @@
                 <div class="swiper-slide"><img src="./projects/Project_6/1.jpg" alt="Project Image 1" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_6/2.webp" alt="Project Image 2" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_6/3.jpeg" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_6/4.jpeg" alt="Project Image 4" /></div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
