--- a/project_4.html
+++ b/project_4.html
@@ -8,6 +8,29 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <style>
+      .project-image-wrapper {
+        height: 500px;
+        width: 55%;
+      }
+      .swiper-slide {
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .swiper-slide img {
+        height: 100%;
+        width: auto;
+        object-fit: contain;
+      }
+      @media screen and (max-width: 768px) {
+        .project-image-wrapper {
+          height: 350px;
+          width: 100%;
+        }
+      }
+    </style>
   </head>
   <body>
     <nav id="desktop-nav" style="justify-content: flex-start; padding-left: 5%;">
