--- a/project_3.html
+++ b/project_3.html
@@ -21,7 +21,7 @@
       }
       .swiper-slide img {
         height: 100%;
-        width: auto;
+        width: 100%;
         object-fit: contain;
       }
       @media screen and (max-width: 768px) {
@@ -35,7 +35,7 @@
   <body>
     <nav id="desktop-nav" style="justify-content: flex-start; padding-left: 5%;">
       <ul class="nav-links">
-        <li><a href="index.html#projects" class="btn btn-color-2" style="width: auto; display: flex; align-items: center; gap: 0.5rem; text-decoration: none; padding: 0.5rem 1.5rem;"><span style="font-size: 2.5rem; line-height: 0; padding-bottom: 5px;">&#8592;</span> Back to Home</a></li>
+        <li><a href="index.html#projects" class="btn btn-color-2" style="width: auto; display: flex; align-items: center; gap: 0.5rem; text-decoration: none; padding: 0.5rem 1.5rem; font-size: 1.2rem;"><span style="line-height: 0; padding-bottom: 5px;">&#8592;</span> Back to Home</a></li>
       </ul>
     </nav>
     
