--- a/index.html
+++ b/index.html
@@ -342,8 +342,8 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Commvault Backup</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">NDB</p>
+            <h2 class="skills-sub-title project-title">Thilinapath App</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Ministry of Education</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_7.html'">
                 Explore
@@ -380,6 +380,23 @@
             <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">SLT</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_9.html'">
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project_10.png"
+                alt="Project 10"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Thilinapath Project</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Ministry of Education</p>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_10.html'">
                 Explore
               </button>
             </div>
@@ -556,8 +573,25 @@
               </button>
             </div>
           </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project_10.png"
+                alt="Project 10"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Thilinapath Project</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Ministry of Education</p>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_10.html'">
+                Explore
+              </button>
+            </div>
         </div>
       </div>
+    </div>
 
       <h2 class="skills-sub-title project-category-title" data-aos="fade-up" data-aos-once="false">University Projects</h2>
       <div class="project-slider-container" data-aos="fade-up" data-aos-once="true">
@@ -572,11 +606,11 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project One</h2>
+            <h2 class="skills-sub-title project-title">RFID Asset Tracking</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-university.html?title=Project%20One'"
+                onclick="location.href='./project_U_1.html'"
               >
                 Explore
               </button>
@@ -591,11 +625,11 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Two</h2>
+            <h2 class="skills-sub-title project-title">Transformer Thermal Inspection</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Two'"
+                onclick="location.href='./project_U_2.html'"
               >
                 Explore
               </button>
@@ -614,7 +648,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-university.html?title=Project%20Three'"
+                onclick="location.href='./project_U_3.html'"
               >
                 Explore
               </button>
@@ -633,46 +667,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Four'"
-              >
-                Explore
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container project-card">
-            <div class="article-container">
-              <img
-                src="./assets/project-2.png"
-                alt="Project 5"
-                class="project-img"
-                data-speed="0.02"
-              />
-            </div>
-            <h2 class="skills-sub-title project-title">Exadata Migration</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Amana Bank</p>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='./project_5.html'"
-              >
-                Explore
-              </button>
-            </div>
-          </div>
-          <div class="details-container color-container project-card">
-            <div class="article-container">
-              <img
-                src="./assets/project-3.png"
-                alt="Project 6"
-                class="project-img"
-                data-speed="0.02"
-              />
-            </div>
-            <h2 class="skills-sub-title project-title">Project Six</h2>
-            <div class="btn-container">
-              <button
-                class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Six'"
+                onclick="location.href='./project_U_4.html'"
               >
                 Explore
               </button>
@@ -683,18 +678,18 @@
             <div class="article-container">
               <img src="./assets/project-1.png" alt="Project 1" class="project-img" data-speed="0.02" />
             </div>
-            <h2 class="skills-sub-title project-title">Project One</h2>
+            <h2 class="skills-sub-title project-title">RFID Asset Tracking</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20One'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_U_1.html'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img src="./assets/project-2.png" alt="Project 2" class="project-img" data-speed="0.02" />
             </div>
-            <h2 class="skills-sub-title project-title">Project Two</h2>
+            <h2 class="skills-sub-title project-title">Transformer Thermal Inspection</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Two'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_U_2.html'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
@@ -703,7 +698,7 @@
             </div>
             <h2 class="skills-sub-title project-title">Project Three</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Three'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_U_3.html'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
@@ -712,25 +707,7 @@
             </div>
             <h2 class="skills-sub-title project-title">Project Four</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Four'">Explore</button>
-            </div>
-          </div>
-          <div class="details-container color-container project-card">
-            <div class="article-container">
-              <img src="./assets/project-2.png" alt="Project 5" class="project-img" data-speed="0.02" />
-            </div>
-            <h2 class="skills-sub-title project-title">Project Five</h2>
-            <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Five'">Explore</button>
-            </div>
-          </div>
-          <div class="details-container color-container project-card">
-            <div class="article-container">
-              <img src="./assets/project-3.png" alt="Project 6" class="project-img" data-speed="0.02" />
-            </div>
-            <h2 class="skills-sub-title project-title">Project Six</h2>
-            <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Six'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_U_4.html'">Explore</button>
             </div>
           </div>
         </div>
